COMMIT VERSION 0.0.42 feat(seguridad): implementar puerto de aislamiento de tenant y asegurar casos de uso de usuarios y productos - Crear la interfaz CurrentUserProviderPort en core.permissions para desacoplar los casos de uso del framework de seguridad. - Crear el adaptador SpringSecurityUserProvider para resolver el contexto de usuario y tenant en base al token JWT. - Agregar la estrategia OperatorCannotChangeOtherStatusStrategy para prohibir que roles operativos (OPT) alteren el estado de otros usuarios. - Refactorizar ChangeStatusUserAvalonUseCaseImpl para validar que el usuario objetivo pertenezca a la misma tienda que el ejecutor y forzar la máquina de estados. - Implementar validación estricta de Tenant en casos de uso de productos (creación, catálogo por outlet, edición y estado) para blindar el aislamiento entre tiendas. - Registrar StatusChangeValidator como @Component de Spring con un único constructor limpio para inyección de dependencias.